Fixed font alignment

--- a/src/main/webapp/Styles/home.css
+++ b/src/main/webapp/Styles/home.css
@@ -5,13 +5,18 @@
     grid-template-areas: "pfp_area label_area";
     column-gap: 1cm;
     justify-content: center;
+    align-items: center;
 }
 
 .profile-container h1{
     grid-area: label_area;
     display:flex;
     flex-direction:column;
-    width:fit-content;
+
+    font-weight:lighter;
+    align-items:center;
+
+    width:100%;
     height: fit-content;
 }
 
